welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:12: error: reassignment to val
        	die1=1
                    ^withoutDoubles:11: error: type mismatch;
 found   : Unit
 required: Int
        if (die1==6){
        ^